...
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Hermes.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_login_screen" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
